--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "@nuxt/ui": "^3.0.2",
+    "@pinia/nuxt": "^0.10.1",
     "firebase": "^11.6.0",
     "nuxt": "^3.16.2",
+    "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   }
